// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docsGen:comments should convert comments 1`] = `
{
 "docsGenTypes": {
  "test/test.tsx:ITest": {
   "summary": {
    "module": "test/test.tsx",
    "typeName": {
     "name": "ITest",
     "nameFull": "ITest"
    },
    "src": "test/test.tsx",
    "comment": {
     "raw": [
      "This is an export level multiline TSDoc."
     ]
    },
    "exported": true
   },
   "details": {
    "kind": 263,
    "typeValue": {
     "raw": "ITest",
     "print": [
      "/**",
      " * This is an export level multiline TSDoc.",
      "*/",
      "interface ITest {",
      "    // Single line comment should be ignored",
      "    a: number;",
      "    /** This is property-level TSDoc */",
      "    b: number;",
      "}"
     ]
    },
    "props": [
     {
      "uid": "a",
      "name": "a",
      "typeValue": {
       "raw": "number"
      },
      "editor": {
       "type": "number"
      },
      "required": true
     },
     {
      "uid": "b",
      "name": "b",
      "comment": {
       "raw": [
        "This is property-level TSDoc"
       ]
      },
      "typeValue": {
       "raw": "number"
      },
      "editor": {
       "type": "number"
      },
      "required": true
     }
    ],
    "propsFromUnion": false
   }
  }
 }
}
`;

exports[`docsGen:comments should convert property-level tags 1`] = `
{
 "docsGenTypes": {
  "test/test.tsx:ITest": {
   "summary": {
    "module": "test/test.tsx",
    "typeName": {
     "name": "ITest",
     "nameFull": "ITest"
    },
    "src": "test/test.tsx",
    "exported": true
   },
   "details": {
    "kind": 263,
    "typeValue": {
     "raw": "ITest",
     "print": [
      "interface ITest {",
      "    /**",
      "     * This is property \\"a\\"",
      "     * @default true",
      "     */",
      "    a: boolean;",
      "    /**",
      "     * This is property \\"b\\"",
      "     * @default 100",
      "     */",
      "    b: number;",
      "    /**",
      "     * This is property \\"c\\"",
      "     * @default 'hello'",
      "     */",
      "    c: string;",
      "    /**",
      "     * This is property \\"d\\"",
      "     * @default null",
      "     */",
      "    d: string;",
      "}"
     ]
    },
    "props": [
     {
      "uid": "a",
      "name": "a",
      "comment": {
       "raw": [
        "This is property \\"a\\"",
        " @default true"
       ],
       "tags": {
        "@default": true
       }
      },
      "typeValue": {
       "raw": "boolean"
      },
      "editor": {
       "type": "bool"
      },
      "required": true
     },
     {
      "uid": "b",
      "name": "b",
      "comment": {
       "raw": [
        "This is property \\"b\\"",
        " @default 100"
       ],
       "tags": {
        "@default": 100
       }
      },
      "typeValue": {
       "raw": "number"
      },
      "editor": {
       "type": "number"
      },
      "required": true
     },
     {
      "uid": "c",
      "name": "c",
      "comment": {
       "raw": [
        "This is property \\"c\\"",
        " @default 'hello'"
       ],
       "tags": {
        "@default": "hello"
       }
      },
      "typeValue": {
       "raw": "string"
      },
      "editor": {
       "type": "string"
      },
      "required": true
     },
     {
      "uid": "d",
      "name": "d",
      "comment": {
       "raw": [
        "This is property \\"d\\"",
        " @default null"
       ],
       "tags": {
        "@default": null
       }
      },
      "typeValue": {
       "raw": "string"
      },
      "editor": {
       "type": "string"
      },
      "required": true
     }
    ],
    "propsFromUnion": false
   }
  }
 }
}
`;
